--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="top-header">
+        <img src="logo.png" alt="Company Logo" id="logo">
+
+        <div class="company-name">Company Name</div>
+    </div>
+
     <header>
-        <h1>My Website</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
@@ -16,12 +23,16 @@
             <a href="login.html">Login</a>
         </nav>
     </header>
+
     <main>
         <h2>Welcome to My Website</h2>
+
         <p>This is the homepage of my personal website. Here you can find a variety of products, contact information, and login functionality.</p>
     </main>
+
     <footer>
         <p>© 2024 My Website</p>
     </footer>
 </body>
+
 </html>
